<resources>
    <string name="app_name">PartB</string>

    <string name="Jay">Jay Chou</string>
    <string name="artname">Name: Jay</string>
    <string name="officallink"><a href="http://jaychoustudio.com">Main Page</a></string>
    <string name="action_settings">Settings</string>
    <string name="facebook_link"><a href="https://www.facebook.com/jay?sk=wall">Facebook</a></string>
    <string name="main_like">Like: Music</string>
    <string name="Hate">DisLike: dishonest</string>
    <string name="main_phone">Phone: 123456789</string>
    <string name="email_address">Email: jay@andrew.cmu.edu</string>
    <string name="birthday">Date of Birth: 10/10/1980</string>

    <!--UI TEXT-->
    <string name="music">Music</string>
    <string name="video">Video</string>
    <string name="imagewall">Image Wall</string>
    <string name="MailList">Mail List</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_music">MusicActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="title_activity_image_wall">ImageWallActivity</string>
    <string name="title_activity_email">EmailActivity</string>

    <string name="music1">music1</string>
    <string name="music2">music2</string>
    <string name="video1">video1</string>
    <string name="video2">video2</string>

    <string name="play">play</string>
    <string name="pause">pause</string>
    <string name="stop">stop</string>

    <string name="image1">Image1</string>
    <string name="image2">Image2</string>
    <string name="image3">Image3</string>
    <string name="subject">Input Subject</string>
    <string name="content">Input Content</string>
    <string name="send">Send Email to Jay</string>




</resources>
