<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/nametext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/artname"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/birthdaytext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birthday"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/liketext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_like"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/hatetext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Hate"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/phonetext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_phone"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/emailtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        android:textSize="20dp" />

    <Button
        android:id="@+id/mainwebpage_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/officallink"
        android:textSize="20dp" />

    <Button
        android:id="@+id/facebook_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/facebook_link"
        android:textSize="20dp" />


</LinearLayout>
