<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <Button
        android:id="@+id/musicbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/music" />

    <Button
        android:id="@+id/videobutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video" />

    <Button
        android:id="@+id/wallbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imagewall" />

    <Button
        android:id="@+id/emailbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MailList" />

</LinearLayout>
