<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.zhengyu.partb.ui.EmailActivity">

    <TextView
        android:id="@+id/maillisttitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/MailList"
        android:textSize="20dp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/subjectEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/maillisttitle"
        android:hint="@string/subject" />

    <EditText
        android:id="@+id/contentEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/subjectEdit"
        android:hint="@string/content" />

    <Button
        android:id="@+id/sendemailButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contentEdit"
        android:layout_centerHorizontal="true"
        android:text="@string/send" />

</RelativeLayout>
