<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.zhengyu.partb.ui.VideoActivity">

    <TextView
        android:id="@+id/videtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/video"
        android:textSize="20dp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/video1button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/videtitle"
        android:text="@string/video1" />

    <Button
        android:id="@+id/videopausebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/videtitle"
        android:layout_centerHorizontal="true"
        android:text="@string/pause" />

    <Button
        android:id="@+id/video2buton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/videtitle"
        android:text="@string/video2" />

    <VideoView
        android:id="@+id/videoview"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_below="@id/video1button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />


</RelativeLayout>
